--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -85,7 +85,7 @@
     .string {
       color: #A3BE8C;
       font-weight: 400;
-      font-family: 'Hack';
+      font-family: 'AFParseGroteskMono-Light';
     }
 
     .title {
@@ -140,7 +140,7 @@
     .meta-string {
       color: #A3BE8C;
       font-weight: 400;
-      font-family: 'Hack';
+      font-family: 'AFParseGroteskMono-Light';
     }
 
     .attr {
