--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -7,7 +7,7 @@
   padding: 0 25px 20px;
   white-space: pre-wrap !important;
   font-weight: 400;
-  font-family: 'Hack';
+  font-family: 'AFParseGroteskMono-Light';
   @media(max-width: @mobile-breakpoint) {
     padding: 0 20px 20px;
     font-size: 12px !important;
@@ -35,11 +35,11 @@
     margin-bottom: 10px;
     top: 0;
     left: 0;
-    font-family: @h1-font;
+    font-family: @header-light-font;
     font-size: 1.3em;
     font-style: normal;
     font-variant: normal;
-    font-weight: 600;
+    font-weight: 500;
     text-rendering: auto;
     text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.5);
     content: "Code Snippet";
