--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -12,7 +12,7 @@
 
     .string {
       font-weight: 400;
-      font-family: 'Hack';
+      font-family: 'AFParseGroteskMono-Light';
       color: #a0e4cf;
 
       @media(max-width: @mobile-breakpoint) {
