--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -22,7 +22,7 @@
       .string {
         color: #b8ffdc !important;
         font-weight: 100;
-        font-family: 'Hack';
+        font-family: 'AFParseGroteskMono-Light';
 
         @media(max-width: @mobile-breakpoint) {
           white-space: pre;
@@ -57,7 +57,7 @@
       .title {
         color: #ffe567 !important;
         font-weight: 700;
-        font-family: 'Hack';
+        font-family: 'AFParseGroteskMono-Light';
       }
 
       .attr,
@@ -73,7 +73,7 @@
       .keyword {
         color: #45b3c9 !important;
         font-weight: 600;
-        font-family: 'Hack';
+        font-family: 'AFParseGroteskMono-Light';
       }
     }
   }
