--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -49,7 +49,7 @@
     .string {
       color: #b0def0;
       font-weight: 400;
-      font-family: 'Hack';
+      font-family: 'AFParseGroteskMono-Light';
     }
     /*color: fg_purple*/
     .attribute,
@@ -64,7 +64,7 @@
     .tag {
       color: #79bbf3;
       font-weight: 700;
-      font-family: 'Hack';
+      font-family: 'AFParseGroteskMono-Light';
     }
     /*color: fg_aqua*/
     .subst,
