--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -73,7 +73,7 @@ blockquote pre {
     border-radius: 2px;
     font-size: 0.8em;
     font-weight: 400;
-    font-family: 'Hack', sans-serif;
+    font-family: 'AFParseGroteskMono-Light', sans-serif;
     white-space: nowrap;
   }
 
