more font fixes

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -81,7 +81,7 @@
 						<h3 class="repo-title">hackers-graphql-server</h3>
 						<p class="repo-description">Standalone API to handle account creation, auto-publish to medium, and site-wide link embeds.</p>
 						<span class="github-card__meta">
-							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
+							<span class="github-card__language-icon" style="color: #2b7489;">●</span> Typescript
 						</span>
 						<span class="github-card__meta">
 							<i class="fa fa-star" aria-hidden="true"></i>
