--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -111,7 +111,7 @@
 
     a {
       color: #105a6d;
-      font-family: @body-font;
+      font-family: @body-font-bold;
 
       &:hover {
         text-decoration: none;
