--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -741,7 +741,7 @@ nav {
 
 		button {
 			border: none;
-			font-family: @body-font-bold;
+			font-family: @body-font-bold !important;
     	font-weight: 100;
 			font-size: 0.9em;
 			padding: 0;
@@ -791,6 +791,7 @@ nav {
 
 	a {
 		color: @text-color;
+		font-family: @body-font-bold;
 		transition: all 0.3s ease-out;
 
 		&:hover {
