--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -8,6 +8,7 @@
     .attr {
       color: #7ac9ff !important;
       font-weight: 700;
+      font-family: 'AFParseGroteskMono-Regular', sans-serif;
     }
 
     .string {
@@ -86,6 +87,7 @@
 
     .strong {
       font-weight: bold;
+      font-family: 'AFParseGroteskMono-Regular', sans-serif;
     }
 
     .link {
