--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -356,7 +356,7 @@
 
         h2 {
           color: #3f4856;
-          font-family: @h1-font;
+          font-family: @header-light-font;
           margin-bottom: 7px;
           margin-top: 0;
           font-size: 1.3em;
@@ -389,7 +389,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.8em;
-          font-family: @body-font;
+          font-family: @body-font-bold;
         }
       }
     }
