--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -162,6 +162,7 @@
 			font-family: @body-font-bold;
 			@media(max-width: @mobile-breakpoint) {
 				white-space: nowrap;
+				font-family: @body-font-bold;
 				overflow: hidden;
 				text-overflow: ellipsis;
 				max-width: 90%;
