--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -229,7 +229,7 @@ section .widget.newsletter {
 
 		h4 {
 			margin: 0;
-			font-family: @h1-font;
+			font-family: @body-font-bold;
 			font-weight: 100;
 		}
 
