fixed twitter widget

--- a/partials/widgets/widget-twitter.hbs
+++ b/partials/widgets/widget-twitter.hbs
@@ -1,6 +1,6 @@
 <!-- Start Twitter Widget -->
 <div class="widget twitter">
   <h4 class="title">Twitter</h4>
-  <iframe src="https://feed.mikle.com/widget/v2/105905/" height="865px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+  <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="105905/"></script>
 </div>
 <!-- End Twitter Widget -->
