--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -126,7 +126,7 @@ input:hover {
 .btn-default[disabled] {
 	border: 1px solid @text-color-heading;
 	background: @text-color-heading;
-	color: @white;
+	color: white;
 }
 
 input[type="search"],
@@ -144,13 +144,13 @@ input[type="password"] textarea {
 }
 
 ::-moz-selection {
-	color: @white;
+	color: white;
 	background: @theme-color;
 	text-shadow: none;
 }
 
 ::selection {
-	color: @white;
+	color: white;
 	background: @theme-color;
 	text-shadow: none;
 }
