--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -460,7 +460,7 @@ nav {
 
 			ul {
 				visibility: hidden;
-				background: @white;
+				background: white;
 				text-align: left;
 				margin-bottom: 20px;
 				position: absolute;
