--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -24,7 +24,7 @@
 		&:hover {
 			background: @hover-color;
 			text-decoration: none;
-			color: @white;
+			color: white;
 			cursor: pointer;
 		}
 	}
@@ -41,7 +41,7 @@
 		&:hover {
 			background: @hover-color;
 			text-decoration: none;
-			color: @white;
+			color: white;
 			cursor: pointer;
 		}
 	}
@@ -61,7 +61,7 @@
 		&:hover {
 			background: @hover-color;
 			text-decoration: none;
-			color: @white;
+			color: white;
 			cursor: pointer;
 		}
 	}
