--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -182,7 +182,7 @@
 	.featured {
 		position: absolute;
 		background: @theme-color;
-		color: @white;
+		color: white;
 		text-align: center;
 		top: -12px;
 		right: -32px;
