--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -19,8 +19,6 @@
 @text-color-footer: #b4b4b4;
 @text-color-light: #959595;			// Light text color
 @border-color: #ebebeb;
-@black: #000000;					// Pure black
-@white: #FFFFFF;					// Pure White
 @text-post-header: #20809c;
 
 @base-url: 'https://hackersandslackers.com/';
@@ -40,7 +38,7 @@
 
 // Series Colors
 @pandas-color:#7b5195;
-@flask-color:#be90ca;
+@flask-color:#4d5056;
 @code-color:#6691c8;
 @aws-color:#cc9543;
 @mysql-color:#5f6bbd;
