--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -557,7 +557,7 @@
 				cursor: pointer;
 
 				i {
-					color: @white;
+					color: white;
 				}
 			}
 		}
@@ -676,11 +676,11 @@
 			margin-left: 10px;
 
 			&:hover {
-				color: @white;
+				color: white;
 				background: @theme-color;
 
 				a {
-					color: @white;
+					color: white;
 				}
 			}
 
