--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -1,5 +1,5 @@
 .about-author {
-  background: @white;
+  background: white;
   padding: 40px 60px;
   min-height: 85px;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
