--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -192,7 +192,7 @@ article {
 	width: 100% !important;
 	padding: 0 !important;
 	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
-	background: @white;
+	background: white;
 	margin-bottom: 0;
 	position: relative;
 	overflow: hidden;
