--- a/src/less/posts/previewplaceholder.less
+++ b/src/less/posts/previewplaceholder.less
@@ -58,7 +58,7 @@
   overflow: hidden;
   animation: placeholderShimmer @placeholderLoadingAnimationDuration linear;
   animation-iteration-count: infinite;
-  background-color: @white;
+  background-color: white;
   background-image: @placeholderLoadingGradient;
   background-size: @placeholderLoadingGradientWidth 100%;
   padding: 0 20px 20px;
@@ -129,7 +129,7 @@
 .ui.placeholder .line,
 .ui.placeholder .line:after,
 .ui.placeholder > :before {
-  background-color: @white;
+  background-color: white;
 }
 /* Image */
 .ui.placeholder .image:not(.header):not(.ui) {
@@ -268,7 +268,7 @@
 .ui.inverted.placeholder .line,
 .ui.inverted.placeholder .line:after,
 .ui.inverted.placeholder > :before {
-  background-color: @black;
+  background-color: black;
 }
 /*******************************
             Variations
