--- a/post.hbs
+++ b/post.hbs
@@ -71,14 +71,14 @@
 		{{> posts/postfooter}}
 		{{#contentFor "scripts"}}
 			<script async src="{{asset "js/posts.js"}}"></script>
-			<!--<script src="https://hackersandslackers.com/assets/js/includes/highlight.min.js"></script>-->
-			<!--<script>
+			<script src="https://hackersandslackers.com/assets/js/includes/highlight.min.js"></script>
+			<script>
 				hljs.configure({
 					tabReplace: '  ', // 2 spaces
 					classPrefix: '' // don't append class prefix
 				});
 				hljs.initHighlightingOnLoad();
-			</script>-->
+			</script>
 		{{/contentFor}}
 	{{/post}}
 </div>
