posts.js refactor

--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -31,15 +31,14 @@
     position: absolute;
     width: 100%;
     height: auto;
-    padding: 6px 25px;
+    padding: 6px 25px 3px;
     margin-bottom: 10px;
     top: 0;
     left: 0;
-    font-family: @header-light-font;
+    font-family: @h1-font;
     font-size: 1.3em;
     font-style: normal;
     font-variant: normal;
-    font-weight: 500;
     text-rendering: auto;
     text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.5);
     content: "Code Snippet";
