--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -3,7 +3,7 @@
     &.language-python,
     &.python {
       color: #e4f8fd;
-      background: #222b45;
+      background: #1c2645;
 
       &::before {
         height: auto;
