--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -9,7 +9,7 @@
 	justify-content: space-between;
 	align-items: center;
 	height: fit-content;
-	margin-top: 50px;
+	margin-top: 70px;
 	width: 100%;
 	max-width: 100%;
 	@media(max-width: @tablet-breakpoint) {
@@ -89,9 +89,9 @@
 				border: 1px solid #dbdbdb;
 				padding: 0;
 				margin: auto 0;
-				min-width: 19%;
+				min-width: 18%;
 				@media(max-width: @tablet-breakpoint) {
-					min-width: none !important;
+					min-width: unset !important;
 					border: 1px solid #eaeaea;
 					height: 36px;
 				}
@@ -110,8 +110,6 @@
 					padding: 7px 0 7px 0 !important;
 					width: fit-content;
 					margin: 0 auto;
-					padding: 0;
-					display: block;
 					@media(max-width: @tablet-breakpoint) {
 						padding: 3px 0 !important;
 						height: fit-content;
