swapped ugilfy for terser

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -23,11 +23,11 @@
 .post-meta,
 .tag {
   .nodejs {
-    color: #4a7400 !important;
+    color: #598708 !important;
     background-color: #d9ecb6;
 
     * {
-      color: #4a7400 !important;
+      color: #598708 !important;
     }
   }
 
