--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -14,15 +14,10 @@
   .lnaguage-http,
   .xml {
     color: #ecf3ff;
-    background: #282c34;
+    background: #212834;
 
     .name {
       color: @hue-5;
-    }
-
-    .attr,
-    .attribute {
-      color: @hue-4;
     }
 
     .tag {
