fixed embedded code snippet languages

--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -1,18 +1,15 @@
 @import "atomone.less";
 
 .post-content {
-  .css,
-  .handlebars,
-  .hljs.html,
-  .http,
-  .language-css,
-  .language-endpoint,
-  .language-handlebars,
-  .language-html,
-  .language-jinja,
-  .language-xml,
-  .lnaguage-http,
-  .xml {
+  .hljs {
+  &.language-css,
+  &.language-css,
+  &.language-endpoint,
+  &.language-handlebars,
+  &.language-html,
+  &.language-jinja,
+  &.language-http,
+  &.language-xml {
     color: #ecf3ff;
     background: #212834;
 
@@ -86,4 +83,5 @@
     background: rgba(56, 62, 102, 0.4);
     color: white;
   }
+}
 }
