--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -523,6 +523,11 @@ article {
 			}
 		}
 
+		iframe {
+			width: 100%;
+			height: 430px;
+		}
+
 		figcaption {
 			width: -webkit-fill-available;
 			width: -moz-available;
