--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -6,7 +6,7 @@
 		Main post area
 	====================================================*/
 	nav {
-		margin-bottom: 1px;
+		margin-bottom: 0 !important;
 	}
 
 	.sidebar {
@@ -289,7 +289,7 @@ article {
 			padding: 53px 20px 16px;
 			font-size: 0.96em;
 			overflow: hidden;
-			margin: 30px auto;
+			margin: 40px auto;
 			border-radius: 5px;
 			max-width: 95%;
 			line-height: 1.7;
@@ -376,18 +376,16 @@ article {
 		/*  End of Protip box  */
 		/*  Start of Blockquote  */
 		blockquote {
-			color: #798286;
+			color: #8d969a;
 			padding: 0 20px;
-			font-family: @body-font;
-			font-style: unset;
 			font-size: 1em;
 			line-height: 1.6;
 			overflow: hidden;
-			margin: 30px auto;
+			margin: 40px auto;
 			max-width: 90%;
 			border-radius: 5px;
 			font-weight: 300;
-			border-left: 1.0em solid #DDDFE2;
+			border-left: .8em solid #DDDFE2;
 
 			& > p {
 				margin: 0 0 20px !important;
@@ -401,11 +399,12 @@ article {
 			}
 
 			* {
-				font-family: @body-font;
+				font-family: @body-font-bold;
+				font-style: italic;
 				font-weight: 100;
 				line-height: 1.6;
 				font-size: 1.05em;
-				font-style: normal;
+				color: #a9abae;
 			}
 
 			code {
@@ -486,7 +485,7 @@ article {
 	figure {
 		width: 99%;
 		max-width: 99%;
-		margin: 30px auto;
+		margin: 40px auto;
 		overflow: visible;
 		box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 		border: 1px solid rgba(206, 206, 206, 0.42);
