style bug fixes

--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -112,12 +112,10 @@
         min-height: 80px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: @body-font;
+        font-family: @header-light-font;
         font-size: 1em !important;
         text-overflow: ellipsis;
-        font-weight: 400;
         @media(max-width: @mobile-breakpoint) {
-          font-size: 0.95em !important;
           min-height: unset;
           height: fit-content;
           max-height: fit-content;
@@ -139,7 +137,6 @@
         .btn {
           padding: 12px 20px;
           font-size: 16px;
-          font-family: AvenirNextLTPro-Light,sans-serif;
 
           a {
             line-height: 1;
