--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -10,12 +10,10 @@
   .language-xml,
   .language-yaml {
     background: #2E3440;
+    color: white;
 
     &::before {
       color: white;
-      @media(max-width: @mobile-breakpoint) {
-        font-size: 12em !important;
-      }
     }
 
     .subst {
