added projects to dropdown

--- a/partials/projects/projects-dropdown.hbs
+++ b/partials/projects/projects-dropdown.hbs
@@ -3,19 +3,33 @@
         <ul>
             <li class="picker"><span>Select a Project</span><i class="fas fa-caret-down"></i>
                 <ul class="dropdown-list">
-                    <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <title>Ghost icon</title>
-                        <path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path>
-                    </svg> ghosttheme-stockholm </li>
-                    <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <title>Ghost icon</title>
-                        <path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path>
-                    </svg> ghosttheme-tokyo </li>
-                    <li class="linkbox-api">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-icon.png"> Linkbox API </li>
-                    <li class="ghostthemes.io">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png"> ghostthemes.io
-                    </li>
+                  <li class="stockholmproject">
+                      <svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <title>Ghost icon</title>
+                          <path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path>
+                      </svg>
+                      <span>"Stockholm" Ghost Theme</span>
+                  </li>
+                  <li class="tokyoproject">
+                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ZillaAlt.png">
+                      <span>"Tokyo" Ghost Theme</span>
+                  </li>
+                  <li class="linkbox-api">
+                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-logo-icon.png">
+                      <span>Linkbox API</span>
+                  </li>
+                  <li class="ghostthemesio">
+                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png">
+                      <span>ghostthemes.io</span>
+                  </li>
+                  <li class="tableau-extraction">
+                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/tableau_icon.png">
+                      <span>Tableau Extraction</span>
+                  </li>
+                  <li class="roblog">
+                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/roblog-icon.png">
+                      <span>Roblog</span>
+                  </li>
                 </ul>
             </li>
             <li class="mobilemenu"><span>Select a Project</span> <i class="fas fa-caret-down"></i>
@@ -25,11 +39,11 @@
                             <title>Ghost icon</title>
                             <path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path>
                         </svg>
-                        <span>ghosttheme-stockholm</span>
+                        <span>"Stockholm" Ghost Theme</span>
                     </li>
                     <li class="tokyoproject">
                         <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ZillaAlt.png">
-                        <span>ghosttheme-tokyo</span>
+                        <span>"Tokyo" Ghost Theme</span>
                     </li>
                     <li class="linkbox-api">
                         <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-logo-icon.png">
@@ -38,6 +52,14 @@
                     <li class="ghostthemesio">
                         <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png">
                         <span>ghostthemes.io</span>
+                    </li>
+                    <li class="tableau-extraction">
+                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/tableau_icon.png">
+                        <span>Tableau Extraction</span>
+                    </li>
+                    <li class="roblog">
+                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/roblog-icon.png">
+                        <span>Roblog</span>
                     </li>
                 </ul>
             </li>
