--- a/partials/footer/footer-about.hbs
+++ b/partials/footer/footer-about.hbs
@@ -1,7 +1,7 @@
 <!-- Start About Widget -->
 <div class="widget about">
   {{#if @site.logo}}
-    <a class="logo"href="{{@site.url}}">
+    <a class="logo"href="{{@site.url}}/">
       <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
     </a>
   {{/if}}
@@ -12,7 +12,7 @@
     <a class="btn twitter" href="{{@site.twitter}}"><i class="fab fa-twitter"></i></a>
     <a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
     <a class="btn github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
-    <a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
+    <a class="btn rss" href="{{@site.url}}//rss/"><i class="fas fa-rss"></i></a>
   </div>
 </div>
 <!-- End About Widget -->
