--- a/partials/widgets/widget-social.hbs
+++ b/partials/widgets/widget-social.hbs
@@ -7,7 +7,7 @@
 		<a class="btn twitter" href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a>
 		<a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
 		<a class="btn github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
-		<a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
+		<a class="btn rss" href="{{@site.url}}//rss/"><i class="fas fa-rss"></i></a>
 	</div>
 </div>
 <!-- End Widget -->
