--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -150,7 +150,7 @@
 			}
 
 			.medium-widget-article__title {
-				font-family: @h1-font;
+				font-family: @header-font-bold;
 				color: @text-color-heading;
 				font-size: 1.2em;
 				line-height: 1.2;
