--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -229,12 +229,12 @@
           line-height: 1.2;
 
           a {
-            font-family: @header-light-font;
+            font-family: @header-font;
             font-size: 1em;
             transition: all 0.2s ease-out;
             color: #334652;
             @media(max-width: @mobile-breakpoint) {
-              font-family: @header-light-font;
+              font-family: @header-font;
               font-size: 0.9em;
             }
             @media(max-width: 500px) {
@@ -254,7 +254,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: @header-light-font;
+          font-family: @header-font;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
