--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -44,7 +44,7 @@ a {
 
 .h1,
 h1 {
-	font-family: @h1-font;
+	font-family: @header-font-bold;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
