--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -194,7 +194,7 @@ nav {
 				}
 
 				a {
-					font-family: @h1-font;
+					font-family: @header-font-bold;
 					font-size: 0.9em;
 					text-transform: uppercase;
 					transform: scale(1);
@@ -273,7 +273,7 @@ nav {
 		}
 
 		a {
-			font-family: @h1-font;
+			font-family: @header-font-bold;
 			font-size: 0.85em;
 			text-transform: uppercase;
 			color: #515b65;
