--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -130,12 +130,12 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family:  @h1-font;
+			font-family:  @header-font-bold;
 			@media(max-width: 950px) {
 				font-size: 1.8em;
 			}
 			@media(max-width: @mobile-breakpoint) {
-				font-size: 1.4em;
+				font-size: 1.5em;
 				margin: 0 0 10px;
 				font-weight: 500;
 				line-height: 1.2em;
@@ -144,13 +144,13 @@
 			a {
 				color: @text-color-heading;
 				transition: all 0.2s ease-out;
-				font-family: @h1-font;
+				font-family: @header-font-bold;
 
 				&:hover {
 					color: @secondary-color;
 				}
 				@media(max-width: @mobile-breakpoint) {
-					font-family:  @h1-font;
+					font-family:  @header-font-bold;
 					font-weight: 500;
 				}
 			}
@@ -163,7 +163,7 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: @header-light-font;
+			font-family: @header-font;
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 1.05em !important;
 				-webkit-line-clamp: 2;
