--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -6,12 +6,12 @@
 	text-align: center;
 	background-color: white;
 	padding: 40px;
-	margin-bottom: 30px;
+	margin:  0 0 30px;
 	width: -webkit-fill-available;
 	width: -moz-fill-available;
 	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 	@media(max-width: @tablet-breakpoint) {
-		margin: 0 auto 25px;
+		margin: 0 auto 20px;
 		width: 92%;
 		padding: 40px 0;
 	}
@@ -33,6 +33,10 @@
 		i {
 			font-size: 18px;
 			margin-right: 5px;
+		}
+
+		span {
+			font-family: @body-font-bold;
 		}
 	}
 
