--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -17,7 +17,7 @@
     .tag-name {
       font-size: 2.2em;
       color: white !important;
-      font-family: @body-font;
+      font-family: @body-font-bold;
       text-shadow: 0 0 20px #2f2d56;
       margin-top: 90px;
     }
@@ -94,7 +94,7 @@
         font-size: 1.4em;
 
         a {
-          font-family: @h1-font;
+          font-family: @header-font-bold;
           font-weight: 500;
         }
       }
@@ -112,7 +112,7 @@
         min-height: 80px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: @header-light-font;
+        font-family: @header-font;
         font-size: 1em !important;
         text-overflow: ellipsis;
         @media(max-width: @mobile-breakpoint) {
@@ -154,7 +154,7 @@
       }
 
       .author,
-      .tags,
+      .date,
       p {
         display: none !important;
       }
@@ -171,7 +171,7 @@
 
   .post-title a {
     font-size: 1em !important;
-    font-family: @header-light-font;
+    font-family: @header-font;
   }
 }
 
@@ -353,7 +353,7 @@
 
         h2 {
           color: #3f4856;
-          font-family: @header-light-font;
+          font-family: @header-font;
           margin-bottom: 7px;
           margin-top: 0;
           font-size: 1.3em;
