--- a/partials/author/about-author.hbs
+++ b/partials/author/about-author.hbs
@@ -18,7 +18,7 @@
 				{{#if website}}
 					<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
 				{{else}}
-					<span class="website"><a href="https://hackersandslackers.com/author/{{slug}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
+					<span class="website"><a href="{{@site.url}}/author/{{slug}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
 				{{/if}}
 				{{#if twitter}}
 					<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i><span class="copy">{{twitter}}</a></span></span>
