--- a/partials/footer/footer-links.hbs
+++ b/partials/footer/footer-links.hbs
@@ -2,11 +2,11 @@
 <div class="widget links">
   <h4 class="footer-title">Links</h4>
   <ul>
-    <li><a href="https://hackersandslackers.com/about/">About Us</a></li>
-    <li><a href="https://hackersandslackers.com/series/">Series</a></li>
-    <li><a href="https://hackersandslackers.com/projects/">Projects</a></li>
-    <li><a href="https://hackersandslackers.com/resources/">Resources</a></li>
-    <li><a href="https://hackersandslackers.com/become-a-contributor/">Join The Club</a></li>
+    <li><a href="{{@site.url}}/about/">About Us</a></li>
+    <li><a href="{{@site.url}}/series/">Series</a></li>
+    <li><a href="{{@site.url}}/projects/">Projects</a></li>
+    <li><a href="{{@site.url}}/resources/">Resources</a></li>
+    <li><a href="{{@site.url}}/become-a-contributor/">Join The Club</a></li>
   </ul>
 </div>
 <!-- End Links Widget -->
