--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -6,11 +6,11 @@
     </div>
     <div id="my-custom-results"></div>
     {{#if @site.logo}}
-      <a class="logo" href="{{@site.url}}">
+      <a class="logo" href="{{@site.url}}/">
         <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
       </a>
     {{else}}
-      <a class="branding" href="{{@site.url}}">{{@site.title}}</a>
+      <a class="branding" href="{{@site.url}}/">{{@site.title}}</a>
     {{/if}}
   </div>
   <div class="navigation">
