--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -31,16 +31,22 @@
             {{#if profile_image}}
               <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy"><span>{{name}}</span></a>
               <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy">
-                <div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div>
+                <div class="info">
+                  <span class="mobile-name">{{slug}}</span>
+                  <span class="mobile-date">{{date published_at format="MMM DD"}}</span>
+                </div>
               </a>
             {{else}}
               <a href="{{url}}" class="meta-item author"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
               <a href="{{url}}" class="meta-item author-mobile"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i>
-                <div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div>
+                <div class="info">
+                  <span class="mobile-name">{{slug}}</span>
+                  <span class="mobile-date">{{date published_at format="MMM DD"}}</span>
+                </div>
               </a>
             {{/if}}
           {{/primary_author}}
-          <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
+          <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date published_at format="MMM DD"}}</span></span>
         </div>
         <a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
       </div>
