--- a/partials/posts/share-links.hbs
+++ b/partials/posts/share-links.hbs
@@ -7,7 +7,7 @@
     <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fab fa-facebook"></i></a>
   </li>
   <li class="btn linkedin">
-    <a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@site.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@site.url}}/" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
   </li>
   <li class="btn ycombinator">
     <a href=`javascript:window.location=%22https://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)`> <i class="fab fa-y-combinator"></i></a>
