--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -16,8 +16,7 @@
 		position: absolute;
 		right: 0;
 		top: 0;
-		background: #a1afc5;
-		color: white;
+		color: #a1afc5;
 		border: none;
 		border-radius: 2px;
 
@@ -33,8 +32,7 @@
 		position: absolute;
 		left: 0;
 		top: 0;
-		background: #a1afc5;
-		color: white;
+		color: #a1afc5;
 		border: none;
 		border-radius: 2px;
 
@@ -94,13 +92,18 @@
 		display: flex;
 		justify-content: center;
 		max-width: 70%;
+		@media(max-width: @mobile-breakpoint) {
+			max-width: 60%;
+    	justify-content: space-between;
+		}
 
 		.page {
 			margin: 0 15px;
+			@media(max-width: @mobile-breakpoint) {
+				margin: 0;
+			}
 		}
-		@media(max-width: @mobile-breakpoint) {
-			max-width: 65%;
-		}
+
 	}
 
 	.total-count {
