--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -8,7 +8,7 @@
     width: 92%;
   }
   @media(max-width: @mobile-breakpoint) {
-    margin: 0 auto 20px;
+    margin: 20px auto;
     width: 93%;
   }
 
