--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -59,5 +59,5 @@
 // Font Styles
 @body-font: 'AvenirNextLTPro-Light', sans-serif;
 @body-font-bold: 'AvenirNextLTPro-Medium', sans-serif;
-@h1-font: 'TTNormsPro-Medium', sans-serif;
-@header-light-font: 'TTNormsPro-Regular', sans-serif;
+@header-font: 'TTNormsPro-Regular', sans-serif;
+@header-font-bold: 'TTNormsPro-Medium', sans-serif;
