--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -62,7 +62,7 @@
 		width: -webkit-fill-available;
 		margin: 20px 0 5px;
 		display: block;
-		font-family: @h1-font !important;
+		font-family: @header-font-bold !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		letter-spacing: 0;
@@ -89,7 +89,7 @@
 		margin: 10px 0 30px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: @header-light-font;
+		font-family: @header-font;
 		@media(max-width: @tablet-breakpoint) {
 			margin: 10px 0 0;
 		}
@@ -135,7 +135,7 @@
 				text-align: left;
 				line-height: 1.3;
 				margin-bottom: 10px;
-				font-family: @h1-font;
+				font-family: @header-font-bold;
 			}
 		}
 
