misc style fixes

--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -34,9 +34,15 @@
 
 	.widget {
 		order: 1;
-
+		
 		.widget-body {
 			background-color: white;
+		}
+		
+		&.github,
+		&.website,
+		&.medium {
+		  display: none;
 		}
 	}
 
