--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -26,13 +26,13 @@
 			font-weight: 300;
 			flex-grow: 1;
 			text-align: center;
-			margin: 0 8px 8px 0;
+			margin: 0 4px 8px;
 			padding: 7px 12px;
 			border: 1px solid rgba(201, 213, 228, 0.79);
 			background: rgba(198, 220, 237, 0.2);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
-				margin: 0 5px 5px 0;
+				margin: 0 2px 5px;
 			}
 
 			&:hover {
