--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -123,7 +123,7 @@
 	}
 
 	.post-head {
-		margin: 0 0 20px;
+		margin: 0 0 15px;
 
 		.post-title {
 			font-size: 2em;
@@ -136,7 +136,7 @@
 			}
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 1.5em;
-				margin: 0 0 10px;
+				margin: 5px 0;
 				font-weight: 500;
 				line-height: 1.2em;
 			}
@@ -147,7 +147,7 @@
 				font-family: @header-font-bold;
 
 				&:hover {
-					color: @secondary-color;
+					color: white;
 				}
 				@media(max-width: @mobile-breakpoint) {
 					font-family:  @header-font-bold;
@@ -165,6 +165,7 @@
 			color: #153b52;
 			font-family: @header-font;
 			@media(max-width: @mobile-breakpoint) {
+				margin: 5px auto 0;
 				font-size: 1.05em !important;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
@@ -429,6 +430,9 @@
 		align-items: center;
 		border-top: 1px solid #e7e7e7;
 		transition: all 0.3s ease-out;
+		@media(max-width: @mobile-breakpoint) {
+			padding: 10px 3px 0;
+		}
 	}
 
 	.btn {
